--- a/src/components/Preview.css
+++ b/src/components/Preview.css
@@ -1,8 +1,7 @@
 .app-preview{
     flex: 5;
-    background-color: rgb(194, 241, 241);
 }
 
 .content-panel{
-    color: black;
+    border: 0.5px solid rgb(85, 85, 85);
 }
