--- a/src/components/Preview.css
+++ b/src/components/Preview.css
@@ -1,7 +1,71 @@
 .app-preview{
     flex: 5;
+    overflow-y: scroll;
 }
+
+/* スクロールバー */
+::-webkit-scrollbar {
+    width: 5px; /* スクロールバーの幅 */
+}
+
+/* スクロールバーのレール */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* スクロールバーの背景色 */
+}
+
+/* スクロールバーのハンドル */
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* スクロールバーの色 */
+}
+
+/* スクロールバーのハンドルがマウスオーバーされたとき */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* スクロールバーのマウスオーバー時の色 */
+}
+
 
 .content-panel{
     border: 0.5px solid rgb(85, 85, 85);
+    padding: 5px 10px;
+}
+
+.post-user{
+    display: flex;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.post-user .user-icon{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
+
+.post-user p{
+    margin: 10px;
+}
+
+.post-text{
+    margin: 0 8%;
+}
+
+.post-like{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: right;
+}
+
+.post-like p{
+    width: 25px;
+    line-height: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.like-button{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
