--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,15 +3,14 @@
 }
 
 .login-info,.logout-info{
-    display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
 }
 
-.user-icon{
+.login-info .user-icon,.logout-info .user-icon{
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
 }
