--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,46 @@
-.App{
+.App {
   width: 100%;
   height: 100vh;
   overflow: hidden;
   font-size: 16px;
   display: flex;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(53, 53, 53, 0.8); /* 半透明の黒背景 */
+  z-index: 1; /* 背景の上に表示 */
+}
+
+.confirm-dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 2; /* ダイアログを最前面に表示 */
+}
+
+.confirm-dialog p {
+  margin-bottom: 10px;
+  color: white;
+  text-align: center;
+}
+
+.confirm-dialog-button {
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+}
+
+.confirm-dialog-button button {
+  margin: 0 20px 0 20px;
 }
