--- a/src/components/Editorbar.css
+++ b/src/components/Editorbar.css
@@ -1,6 +1,8 @@
 .app-editorbar{
     flex: 3;
     height: 100%;
+    background-color: black;
+    text-align: right;
 }
 
 .edit-text{
@@ -12,17 +14,29 @@ textarea {
     height: 100%;
     margin: 5px;
     border: 1px solid #ccc;
-    border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     font-family: 'Inter', sans-serif;
-    font-size: 16px;
+    font-size: 25px;
     resize: vertical;
     transition: border-color 0.3s, box-shadow 0.3s;
     overflow-wrap: break-word;
+    background-color: rgb(194, 194, 194);
+    color: black;
 }
 
 textarea:focus {
     border-color: #66afe9;
     box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
     outline: none;
+}
+
+.edit-button{
+    background-color: rgb(63, 156, 255);
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 30px;
+    margin-right: 15px;
 }
