--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,5 +1,11 @@
 .app-sidebar{
-    flex: 2;
+    flex: 1;
+    background-color: black;
+}
+
+.logo{
+    width: 100px;
+    margin: 10px 0 0 10px;
 }
 
 .login-info,.logout-info{
@@ -13,4 +19,14 @@
     width: 30px;
     height: 30px;
     margin: 0 auto;
+}
+
+.login-button , .logout-button{
+    background-color: rgb(63, 156, 255);
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 30px;
 }
